# SignalNet

./: Makefile  README.md  example_output.csv  pyproject.toml  requirements.txt  test_signal.csv
.github/workflows/: ci.yml
.kiro/specs/data-quality-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/model-architecture-improvements/: design.md  requirements.md  tasks.md
docs/: features.md  index.rst  training.md  usage_example.md
examples/: example.py
input/: debug_data.csv  example_signal_data.csv  hourly_test.csv  signal_data.csv  test_hourly.csv  weekly_test.csv
output/: example_combined.csv  example_forecast.csv  example_input.csv  example_output.csv  signalnet_model.pth  test_results.txt
src/signalnet/: __init__.py  predict.py
src/signalnet/data/: __init__.py  generate_data.py  loader.py  validation.py
src/signalnet/evaluation/: __init__.py  metrics.py
src/signalnet/models/: __init__.py  transformer.py
src/signalnet/training/: __init__.py  train.py
src/signalnet/visualization/: __init__.py  plot.py
tests/: test_data.py  test_evaluation.py  test_model.py  test_training.py  test_validation.py
